Revert "Upgrade the canton version" (#11801)
